@@ -68,3 +68,17 @@ NATO_CSTO_agreement = {
 		NOT = { has_global_flag = NATO_CSTO_treaty_adandoned }
 	}
 }
+
+CSTO_management = {
+	icon = GFX_faction_icon_csto
+	priority = 100
+
+	allowed = {
+		original_tag = SOV
+	}
+
+	visible = {
+		is_faction_leader = yes
+		has_idea = CSTO_member
+	}
+}
