@@ -65,6 +65,26 @@ call_to_war_rule_defensive_only = {
 		has_defensive_war = yes
 	}
 }
+
+call_to_war_rule_always = {
+	type = call_to_war_rules
+	available = {
+		not_locked_faction = no
+	}
+	trigger = {
+		has_war = yes
+	}
+	ai_will_do = {
+		base = 0
+		modifier = {
+			add = 2
+			is_faction_leader = yes
+		}
+	}
+	modifier = {
+		political_power_factor = -0.05
+	}
+}
 call_to_war_rule_chinese_united_front = {
 	type = call_to_war_rules
 	available = {
