@@ -20,3 +20,18 @@ CSTO_leave = {
 	leave_faction = yes
 	hidden_effect = { news_event = { id = CSTO.5 hours = 6 } }
 }
+
+# Convert CSTO from defensive to offensive alliance
+# Must be called from Russia (SOV) scope
+CSTO_convert_to_offensive = {
+	log = "[GetDateText]: [Root.GetName]: Converting CSTO to offensive alliance"
+	set_country_flag = CSTO_is_offensive
+
+	# Change call to war rule to allow offensive wars
+	set_faction_rule = call_to_war_rule_always
+
+	# Notify members
+	hidden_effect = {
+		news_event = { id = CSTO.6 hours = 6 }
+	}
+}
