@@ -246,3 +246,24 @@ news_event = { #X country left the CSTO news
 		trigger = { NOT = { original_tag = FROM } }
 	}
 }
+
+news_event = { #CSTO converted to offensive alliance
+	id = CSTO.6
+	title = CSTO.6.t
+	desc = CSTO.6.d
+	picture = GFX_news_csto
+
+	is_triggered_only = yes
+	major = yes
+
+	option = {
+		name = CSTO.6.a
+		log = "[GetDateText]: [This.GetName]: CSTO.6.a executed"
+		trigger = { has_idea = CSTO_member }
+	}
+	option = {
+		name = CSTO.6.b
+		log = "[GetDateText]: [This.GetName]: CSTO.6.b executed"
+		trigger = { NOT = { has_idea = CSTO_member } }
+	}
+}
