@@ -20,3 +20,13 @@
  CSTO.5.d: "The leader of [ROOT.GetNameDef], [ROOT.GetLeader], has today announced the country's intention to immediately pull out of the Collective Security Treaty Organization and its affiliated alliances. This will weaken the military pact."
  CSTO.5.a: "Good choice"
  CSTO.5.b: "Interesting"
+
+ CSTO.6.t: "CSTO Becomes Full Military Alliance"
+ CSTO.6.d: "In a major shift of policy, [SOV.GetNameDef] has announced that the Collective Security Treaty Organization will be restructured into a full offensive military alliance. Member states will now be obligated to join any wars declared by the alliance leader, not just defensive ones. This marks a significant escalation in [SOV.GetAdjective] military ambitions and has raised concerns among Western powers."
+ CSTO.6.a: "We stand with Moscow"
+ CSTO.6.b: "A concerning development"
+
+ CSTO_management: "CSTO Management"
+ SOV_convert_csto_to_offensive: "Transform CSTO into Offensive Alliance"
+ SOV_convert_csto_to_offensive_desc: "Currently, the CSTO operates as a defensive alliance - members can only be called to arms when we are attacked. By restructuring the treaty, we can transform it into a full military alliance where members must join all our wars, including offensive operations. This will allow us to call our allies and puppets into any conflict we initiate."
+ SOV_csto_has_at_least_one_member_tt: "CSTO has at least one other member"
