@@ -156,6 +156,10 @@ v1.12.4
   - Fixed being able to do the Internal Investments for Local Conservation Efforts in any state as Brazil even though it should've been limited to the Amazon states
 
  Content:
+  - [SOV] Added decision for Russia to transform CSTO into offensive alliance (Issue #269)
+    - Allows Russia to call CSTO members (including puppets) into offensive wars
+    - New decision category "CSTO Management" for Russia when leading CSTO
+    - News event notifies all countries of the alliance restructuring
   - [GENERIC] Renamed North American formable from "United States of North America" to "North American Federation" (Issue #268)
   - [BUL] Enhanced "Embracing Orthodoxy" focus to add Anti-LGBTQ Stance national spirit (Issue #284)
   - [BUL] Added nationalist drift bonus to Orthodox National Values national spirit
